<resources>
    <string name="app_name">CentingApps</string>
    <string name="custom_login">Login</string>
    <string name="custom_signup">Signup</string>
    <string name="guest_mode"><u>Guest Mode</u></string>
    <string name="message_welcome_page">Lets prevent stunting together and ensure a healthier future for Indonesian children!</string>
    <string name="tittle_welcome_page">Welcome to Centing</string>
    <string name="text_dont_have_account">Dont have an account?</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_short_password">Password cannot be less than 8 characters</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_login_page">Welcome,</string>
    <string name="message_login_page">Sign in to continue!</string>
    <string name="please_login">Sign in for the full feature!</string>
    <string name="bn_home">Home</string>
    <string name="bn_history">History</string>
    <string name="bn_faq">FAQ</string>
    <string name="bn_profile">Profile</string>
    <string name="confirm_close">Press again to exit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="title_onboarding1">Stunting Detection in Children</string>
    <string name="desc_onboarding1">Detecting stunting in children is an important step in ensuring optimal growth and development.</string>
    <string name="title_onboarding2">Providing Information to Children</string>
    <string name="desc_onboarding2">Providing children with information that is appropriate and age appropriate is key to supporting childrens learning and development.</string>
    <string name="title_onboarding3">Children Data History Monitored</string>
    <string name="desc_onboarding3">Monitoring childrens history data involves recording and analyzing their physical, health and academic development over time.</string>
    <string name="descHistory">Child Stunting Detection History</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq_question">Ask Centing</string>
    <string name="faq_desc_gpt">Are you still confused about stunting? Come on, lets ask Centing</string>
    <string name="faq_desc_gpt_btn">Ask Now With Centing</string>
    <string name="descProfile">Your Information</string>
    <string name="title_personal">Personalization</string>
    <string name="p_profile">My Profile</string>
    <string name="p_password">Change Password</string>
    <string name="title_data_privacy">Data and Privacy</string>
    <string name="dp_sk">Terms and Conditions</string>
    <string name="dp_privacy">Privacy Policy</string>
    <string name="title_setting">Settings</string>
    <string name="s_language">Language</string>
    <string name="s_logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reset_pw1">Make sure your password is secure</string>
    <string name="reset_pw2">Protect your account with a unique, never-shared and strong password, so you can focus on monitoring your childs health without worry</string>
    <string name="reset_pw3">Old Password</string>
    <string name="reset_pw4">New Password</string>
    <string name="reset_pw5">Confirm New Password</string>
    <string name="konfirmasi">Confirmation</string>
    <string name="ya">Yes</string>
    <string name="tidak">No</string>
    <string name="dialog_logout_message">Are you sure you want to log out of the application? To return to using the application you must log in again later</string>
    <string name="dialog_setting_message">Are you sure you want to change the language?</string>
    <string name="dialog_delete_child_message">Are you sure you want to delete the childs data?</string>
    <string name="dialog_update_child_message">Are you sure you want to update the childs data?</string>
    <string name="dialog_select_child_detection_message">Are you sure you selected this child for stunting detection?</string>
    <string name="dialog_detection_now_message">Make sure whether the childs data is suitable for stunting detection??</string>
    <string name="hi_welcoming">Hi,</string>
    <string name="dummy_name">Dummy Name Lorem</string>
    <string name="dummy_email">emaildummy@gmail.com</string>
    <string name="riwayat_deteksi">History Detection</string>
    <string name="invitation_check">Lets Detect Stunting!</string>
    <string name="check_now">Check Now</string>
    <string name="check_now2">Check\nNow</string>
    <string name="tips_trik">Tips and Trik</string>
    <string name="artikel">Article</string>
    <string name="share_app">Share this application, lets prevent stunting together and ensure a healthier future for Indonesian children!</string>
    <string name="share_app_action">Share</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_development">Under Feature Development</string>
    <string name="message_development">Sorry, the feature is currently under development, look forward to the latest update, Thank you</string>
    <string name="dummyLongText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis fringilla ipsum. Nam pharetra dapibus justo et pretium. Integer a semper augue, quis ultrices ante. Vestibulum sed massa nec ex vulputate consectetur sed at quam. Cras vestibulum dui non cursus semper. Quisque eleifend sit amet nisl vulputate imperdiet. Suspendisse in molestie ipsum, ac consectetur orci. Sed ante dolor, finibus dapibus pharetra sed, consectetur quis lacus.</string>
    <string name="title_okei">Oke</string>
    <string name="title_detection">Stunting Detection</string>
    <string name="jenis_kelamin">Gender</string>
    <string name="laki_laki">Male</string>
    <string name="perempuan">Female</string>
    <string name="milk">Type of Milk</string>
    <string name="asi_ibu">ASI</string>
    <string name="asi_formula">Formula</string>
    <string name="height_birth">Birth Height\n(Cm)</string>
    <string name="height_latest">Latest Height\n(Cm)</string>
    <string name="height_latest2">Latest Height (Cm)</string>
    <string name="weight_birth">Birth Weight</string>
    <string name="weight_latest">Latest Weight</string>
    <string name="detection_now">Detection Now</string>
    <string name="select_child">Select Child</string>
    <string name="please_select_child">Please Select Child First</string>
    <string name="age">Month</string>
    <string name="default_age">0 Month</string>
    <string name="result_detection_title">Result Detection</string>
    <string name="result_detection_value">Normal</string>
    <string name="result_detection_value_minus">Your childs ideal height is less than his current age, your child needs to grow to enter the normal category.</string>
    <string name="result_detection_value_plus">Congratulations! Your child has succeeded in maintaining good nutritional conditions so that he is not included in the stunting category.</string>
    <string name="note_result">The results of this detection will be saved automatically into history according to each childs data</string>
    <string name="expand1">What is Stunting ?</string>
    <string name="faq1">Stunting is a condition of failure to thrive in children under five years of age (toddlers) due to chronic lack of nutritional intake and recurrent infections, especially during the First 1,000 Days of Life (HPK), namely from the fetus to the child aged 23 months. Stunting is determined by an anthropometric index that uses body length data based on age (PB/U) for children under 2 years of age and uses height based on age data (TB/U) for children aged 2 years and over.</string>
    <string name="expand2">What are the characteristics of stunting?</string>
    <string name="faq2">- Growth slows down, Face looks younger than children his age, Delayed tooth growth, Poor performance in focus ability and learning memory, Age 8-10 years children become quieter , dont make much eye contact with people around them, The toddlers weight does not increase and even tends to decrease, The childs body development is hampered, such as late menarche (a girls first menstruation). The child is easily attacked by various infectious diseases. </string>
    <string name="expand3">What are the impacts of stunting?</string>
    <string name="faq3">There are many losses that children experience if they experience stunting. The short-term impacts of stunting on children aged 0-5 are: (1) The child gets sick easily, (2) The childs growth and development is hampered, for example the child is late in talking or walking. Apart from that, stunting also has long-term impacts, namely (1) When you go to school, your learning ability decreases, which has a negative impact on learning achievement; (2) Obesity/overweight; (3) When you grow up, your chances of getting a decent job are reduced; (4) Have a higher risk of developing non-communicable diseases, such as diabetes mellitus, heart disease, etc..</string>
    <string name="expand4">Can stunting be prevented or corrected?</string>
    <string name="faq4">Stunting can be prevented or corrected if done before or during the golden period. Therefore, various important interventions are carried out from an early age, starting from preparing the nutritional and health conditions of the expectant mother to ensuring good health and adequate nutrition, especially in the first 1000 days of life, namely from the time the child is in the womb until the age of 2 years.</string>
    <string name="tb_child">Child Data</string>
    <string name="tb_add_child">Add Child Data</string>
    <string name="child_name">Child Name</string>
    <string name="child_birth">Birth Date</string>
    <string name="child_age">Age (Months)</string>
    <string name="child_age2">Age (Months)</string>
    <string name="tb_child_detail">Child Detail</string>
    <string name="status_0">Normal</string>
    <string name="status_1">Severely stunting</string>
    <string name="status_2">Stunting</string>
    <string name="status_3">High</string>
    <string name="rdp_title">The following are recommended things to maintain good nutrition:</string>
    <string name="rdp_1">Continue breastfeeding until 2 years of age or older while introducing healthy solid foods.</string>
    <string name="rdp_2">Provide complementary foods for breast milk (MPASI) that are balanced and rich in nutrients.</string>
    <string name="rdp_3">Make sure your child gets enough vitamins and minerals to support growth and development.</string>
    <string name="rdm_title">The following are recommended things to overcome stunting in toddlers:</string>
    <string name="rdm_1">Exclusively breastfeed for the first 6 months to ensure optimal nutrition.</string>
    <string name="rdm_2">After 6 months, provide MPASI which is rich in nutrients to support growth.</string>
    <string name="rdm_3">Make sure your child gets enough vitamins and minerals from their food.</string>
    <string name="rdm_4">Make sure your child always drinks clean water to maintain health.</string>
    <string name="rdm_5">Set a regular eating schedule to form a healthy eating pattern.</string>
    <string name="rdm_6">Keep yourself and your environment clean to prevent infection.</string>
    <string name="rdm_7">Complete child immunizations according to schedule to prevent disease.</string>
    <string name="rdm_8">Perform regular health checks to monitor your childs development.</string>
    <string name="rdm_9">Provide physical and cognitive stimulation to support brain and motor development.</string>
    <string name="rdm_10">Give love and attention so that the child feels safe and loved.</string>
</resources>