<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.WelcomeScreen.WelcomingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divBottom"
        android:layout_marginHorizontal="25dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/welcome_page"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/divBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle_welcome_page"
            android:textColor="@color/navy"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:id="@+id/tvTitleWelcome"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_welcome_page"
            android:textColor="@color/navy"
            android:textSize="14sp"
            android:layout_marginBottom="25dp"
            android:justificationMode="inter_word"
            android:id="@+id/tvMessageWelcome"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/custom_login"
                android:layout_marginRight="7dp"/>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/custom_signup"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvGuestMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guest_mode"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>