<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Register.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divBottom"
        android:layout_marginHorizontal="25dp">
        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/register_page"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/divBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp">

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_page"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/message_login_page"
            android:textColor="@color/black"
            android:textSize="14sp" />

<!--        <TextView-->
<!--            android:id="@+id/userTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/name"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="12sp"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            android:hint="@string/name">

            <com.c241ps220.centingapps.views.CustomView.CustomEditText
                android:id="@+id/ed_register_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textCapWords"
                tools:ignore="SpeakableTextPresentCheck"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/emailTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/email"-->
<!--            android:textSize="12sp"-->
<!--            android:textColor="@color/black"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:layout_marginTop="10dp">

            <com.c241ps220.centingapps.views.CustomView.CustomEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="12sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/passwordTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/password"-->
<!--            android:textSize="12sp"-->
<!--            android:textColor="@color/black" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="10dp"
            android:hint="@string/password">

            <com.c241ps220.centingapps.views.CustomView.CustomEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="12sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/custom_signup"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/text_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account"/>

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/custom_login"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>